# rustlab

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  Makefile  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  help  llms.txt
.github/workflows/: validate-notebooks.yml
crates/rustlab-cache/: Cargo.toml
crates/rustlab-cache/src/: duration.rs  file_fp.rs  lib.rs  store.rs
crates/rustlab-cache/tests/: multi_process.rs
crates/rustlab-cli/: Cargo.toml
crates/rustlab-cli/src/: cli.rs
crates/rustlab-cli/src/commands/: cache.rs  docs.rs  info.rs  mod.rs  notebook.rs  repl.rs  run.rs
crates/rustlab-cli/tests/: cache.rs  docs.rs  examples.rs
crates/rustlab-core/: Cargo.toml
crates/rustlab-core/examples/: bench_factor_reuse.rs  bench_sparse_solve.rs
crates/rustlab-core/src/: fingerprint.rs  lib.rs  types.rs
crates/rustlab-dsp/: Cargo.toml
crates/rustlab-dsp/examples/: bench_laplacian_build.rs  bench_vector_calc.rs
crates/rustlab-dsp/src/: laplacian.rs  lib.rs  rasterize.rs  stft.rs  tests.rs  vector_calc.rs  waterfall.rs  wavelet.rs  welch.rs  welch_stream.rs
crates/rustlab-notebook/: Cargo.toml
crates/rustlab-notebook/src/: cache.rs  check.rs  embed.rs  execute.rs  lib.rs  main.rs  markdown_safe.rs  mermaid.rs  parse.rs  render.rs  render_json.rs  render_latex.rs  render_markdown.rs  validate.rs  watch.rs
crates/rustlab-notebook/src/server/: assets.rs  diff.rs  http.rs  mod.rs  page.rs  render_loop.rs  ws.rs
crates/rustlab-notebook/tests/: embeds.rs  server_smoke.rs  server_ws_smoke.rs  validate_integration.rs
crates/rustlab-notebook/tests/fixtures/bad/: bad.html  bad.md  bad.tex
crates/rustlab-plot/: Cargo.toml
crates/rustlab-plot/src/: animation.rs  ascii.rs  figure.rs  (+8 more)
crates/rustlab-script/: Cargo.toml
crates/rustlab-script/src/: ast.rs  ast_hash.rs  cache_registry.rs  cache_value.rs  error.rs  lexer.rs  lib.rs  parser.rs  purity.rs  tests.rs
crates/rustlab-script/src/eval/: builtins.rs  mod.rs  parmap.rs  profile.rs  rng.rs  sparam_analysis.rs  sparam_conv.rs  touchstone.rs  value.rs
crates/rustlab-script/tests/: cache_dispatch.rs  cache_parser.rs  cache_runtime.rs  cancellation.rs  parse_file.rs
dev/: build-notebooks.sh
dev/plans/: animation_export.md  controls.md  em_performance.md  em_requests_plan.md  em_requests_queue.md  notebook_bugfixes.md  notebook_followups_2026_05_16.md  notebook_future.md  notebook_interactive_server-tradeoff.md  notebook_interactive_server.md  notebook_interactive_widgets.md  notebook_mermaid.md  notebook_obsidian_alignment.md  notebook_obsidian_plugin.md  octave_compat_divergences.md  parmap_nonscalar_outputs.md  parmap_parreduce.md  persistent-function-cache-tradeoff.md  persistent_function_cache.md  plot_output_simplification.md  profiling.md  rename_r_to_rlab.md  rlab_unit_testing.md  rustlab_em_requests.md  sparse.md  sparse_solve_handroll.md  tensor3.md  time_frequency.md  waterfall.md
dev/requests/: c2d-d2c-discretization.md  heatmap-image-builtins.md  lqr-raw-matrix-overload.md  matrix-power-vs-elementwise.md  max-min-multi-return.md  notebook-file-embeds.md  notebook-mermaid-diagrams.md  nyquist-plot.md  poly-from-roots.md  tf-from-state-space.md
dev/scripts/: vendor-notebook-assets.sh
docs/: examples.md  functions.md  lesson-site-pattern.md  notebooks.md  quickref.md  sparse_solve.md  validate_octave_report.md
examples/: dielectric.rlab  eig.rlab  functions.rlab  heatmap_image.rlab  language_v0_3.rlab  laplacian_bc.r  log_polar.rlab  masks.rlab  quiver.r  sparse_complex.r  sparse_solve.r  sparse_solve.rlab
examples/audio/: linux.sh  macos.sh  spectrogram_monitor.rlab  spectrogram_monitor.sh  spectrum_monitor.sh  tcp.sh  test_filter.sh  waterfall_monitor.rlab  waterfall_monitor.sh  wsl.sh
examples/controls/: dc_motor_physics_to_tf.rlab  nyquist_plot.rlab  tf_from_state_space.rlab
examples/language/: bench_parmap.rlab
examples/linalg/: eig.rlab
examples/math/: mandelbrot.rlab
examples/notebooks/: README.md  _setup.md  amplifier_analysis.md  animation.md  cache_advanced_demo.md  cache_demo_helpers.rlab  dielectric.md  eigs.md  electrostatics.md  embeds_demo.md  filter_analysis.md  firpm_quantization.md  heatmap_image.md  language_v0_3.md  language_v0_3_4.md  laplacian.md  laplacian_bc.md  log_polar.md  mandelbrot.md  masks.md  mermaid_demo.md  notebook_directives.md  nyquist_stability.md  parallel_montecarlo.md  persistent_cache_demo.md  quick_look.md  seed.md  sparameters_intro.md  sparse_complex.md  sparse_scaling.md  sparse_solve.md  spectral_estimation.md  string_arrays.md  template_interpolation.md  time_frequency.md  vector_fields.md  waterfall.md
examples/pde/: electrostatics.rlab  laplacian.rlab
examples/plot/: animation_wave.rlab
examples/rf/: amplifier_stability.rlab  cascade_attenuator.rlab  measurement_review.rlab  smith_chart.rlab
examples/sparameters/: load_s2p.rlab  polish_features.rlab
examples/sparse/: eigs.rlab
examples/spectral/: cwt_chirp.rlab  pwelch.rlab  spectrogram_chirp.rlab  waterfall_chirp.rlab  waterfall_steps.rlab
gallery/: README.md  _setup.md  amplifier_analysis.md  animation.md  contour_plots.md  dielectric.md  eigs.md  electrostatics.md  embeds_demo.md  filter_analysis.md  firpm_quantization.md  heatmap_image.md  language_v0_3.md  language_v0_3_4.md  laplacian.md  laplacian_bc.md  log_polar.md  mandelbrot.md  masks.md  mermaid_demo.md  multi_notebook.md  notebook_directives.md  nyquist_stability.md  parallel_montecarlo.md  quick_look.md  seed.md  sparameters_intro.md  sparse_complex.md  sparse_scaling.md  sparse_solve.md  spectral_estimation.md  string_arrays.md  surface_plots.md  template_interpolation.md  time_frequency.md  vector_calculus.md  vector_fields.md  waterfall.md
perf/: baseline_pre_tensor3.md  em_performance_phase3.md  em_performance_phase4.md  em_performance_phase6.md  em_performance_summary.md  performance.md  post_phase4.md  run_perf.sh  sparse_solve_phase1to4.md
tests/octave/: compare.m  compare_full.m  reference.m  reference_full.m  run_compare.sh  rustlab_full.r  rustlab_outputs.rlab
(+55 files in other folders)
