[package]
name        = "rustlab-cache"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
description = "Persistent function-result cache (SQLite-backed) for rustlab"

[dependencies]
rusqlite.workspace  = true
blake3.workspace    = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
