[package]
name        = "rustlab-cli"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
description = "Command-line interface and REPL for rustlab"
default-run = "rustlab"

[features]
default = []
viewer  = ["rustlab-script/viewer"]
# Re-enable server-side Mermaid diagram rendering for `rustlab notebook
# render`. Off by default to keep the main `rustlab` binary small (saves
# ~1 MB by dropping mermaid-rs-renderer + fontdb + blake3). The standalone
# `rustlab-notebook` binary still ships with mermaid enabled; without this
# feature `rustlab notebook render` falls back to verbatim mermaid source.
notebook-mermaid = ["rustlab-notebook/mermaid"]

[[bin]]
name = "rustlab"
path = "src/main.rs"

[dependencies]
rustlab-core.workspace     = true
rustlab-dsp.workspace      = true
rustlab-notebook.workspace = true
rustlab-plot.workspace     = true
rustlab-script.workspace   = true
clap                     = { version = "4", features = ["derive"] }
rustyline                = { version = "14", features = ["derive"] }
anyhow.workspace         = true
num-complex.workspace    = true
ndarray.workspace        = true
serde.workspace          = true
serde_json               = "1"

[dev-dependencies]
tempfile = "3"
