[package]
name        = "rustlab-notebook"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
description = "Render Markdown notebooks with rustlab code blocks into HTML reports"

[lib]
name = "rustlab_notebook"
path = "src/lib.rs"

[[bin]]
name = "rustlab-notebook"
path = "src/main.rs"

[features]
# No defaults: workspace feature unification would otherwise pull mermaid's
# dep chain (mermaid-rs-renderer, fontdb, ttf-parser, blake3 — ~1.3 MiB) into
# the main `rustlab` binary. The standalone `rustlab-notebook` bin opts in
# explicitly via the Makefile (`cargo build -p rustlab-notebook --features
# mermaid`); without the feature, mermaid blocks fall back to verbatim source.
default = []
# Server-side Mermaid diagram rendering. Adds resvg/usvg/fontdb to the dep
# tree (~5 crates) plus blake3 for source caching.
mermaid = ["dep:mermaid-rs-renderer", "dep:blake3"]

[dependencies]
rustlab-script.workspace = true
rustlab-cache.workspace  = true
rustlab-plot.workspace   = true
anyhow.workspace         = true
serde.workspace          = true
serde_json.workspace     = true
clap                     = { version = "4", features = ["derive"] }
pulldown-cmark           = "0.13"
tempfile                 = "3"
notify                   = { version = "8", default-features = false, features = ["macos_fsevent"] }
mermaid-rs-renderer      = { version = "0.2", optional = true, default-features = false }
blake3                   = { version = "1",   optional = true }

# Interactive `notebook watch` server (see dev/plans/notebook_interactive_server.md).
# Feature set deliberately trimmed per the trade-off doc: HTTP/1.1 only (loopback),
# current-thread tokio runtime, no compression / CORS / auth (loopback server).
axum                     = { version = "0.8", default-features = false, features = ["http1", "tokio", "ws", "json", "query"] }
tokio                    = { version = "1",   default-features = false, features = ["rt", "macros", "net", "io-util", "time", "sync", "signal"] }
tower-http               = { version = "0.6", default-features = false, features = ["fs"] }
