[package]
name        = "rustlab-script"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
description = "Interpreter and builtins for the rustlab scripting language"

[features]
default = []
viewer  = ["rustlab-plot/viewer"]

[dependencies]
rustlab-core.workspace  = true
rustlab-cache.workspace = true
rustlab-dsp.workspace   = true
rustlab-plot.workspace  = true
num-complex             = { workspace = true, features = ["serde"] }
ndarray                 = { workspace = true, features = ["serde"] }
thiserror.workspace     = true
anyhow.workspace        = true
rand.workspace          = true
rand_distr.workspace    = true
rayon.workspace         = true
zip.workspace           = true
toml.workspace          = true
serde                   = { workspace = true, features = ["derive", "rc"] }
blake3.workspace        = true

[dev-dependencies]
rmp-serde.workspace = true
tempfile.workspace  = true
rusqlite.workspace  = true
